--- a/theme.toml
+++ b/theme.toml
@@ -1,4 +1,4 @@
-name = "coming-soon"
+name = "Coming Soon"
 description = "Simple page with name and a countdown to your website's release date & time"
 
 license = "GNU GPLv3"
