--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
 [submodule "coming-soon"]
 	path = coming-soon
-	url = https://github.com/mansoorbarri/coming-soon
-[submodule "examplesite/themes/coming-soon"]
-	path = examplesite/themes/coming-soon
-	url = https://github.com/mansoorbarri/coming-soon/
+	url = git@github.com:mansoorbarri/coming-soon.git
