--- a/examplesite/config.toml
+++ b/examplesite/config.toml
@@ -17,6 +17,7 @@ socialIcons = [
     {name = "github", url = "https://github.com/"},    
     {name = "instagram", url = "https://instagram.com/"},    
     {name = "tiktok", url = "https://tiktok.com/"},    
+    {name = "linkedin", url = "https://linkedin.com/"},    
 ] 
 
 [params.twitter]
