--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
-name: Deploy to Cloudflare Pages
+- name: Deploy to Cloudflare Pages
+  uses: docker://cloudflare/cloudflare-pages-action:1.4.0
 
 on:
   push:
